@@ -51,28 +51,23 @@
 			<artifactId>jhotdraw-app</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-    <dependency>
+    	<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>4.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.tngtech.jgiven</groupId>
+			<artifactId>jgiven-junit</artifactId>
+			<version>1.2.4</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<argLine>
-						-javaagent:"/Users/maxx0/.m2/repository/org/aspectj/aspectjweaver/1.8.6/aspectjweaver-1.8.6.jar"
-						--add-opens java.base/java.lang=ALL-UNNAMED
-					</argLine>
-					<useSystemClassLoader>true</useSystemClassLoader>
-					<forkMode>always</forkMode>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+
 </project>
